# daily_dose_of_rust

./: .gitignore  README.md
mod_1/: README.md
mod_1/rust_futures/: Cargo.toml
mod_1/rust_futures/src/: lib.rs  main.rs  simple_futures.rs
mod_10/: README.md
mod_10/rust_iterators/: Cargo.toml
mod_10/rust_iterators/src/: into_iter.rs  iter_and_iter_mut.rs  main.rs
mod_11/: README.md
mod_11/idomatic_rust_constructors/: Cargo.toml
mod_11/idomatic_rust_constructors/src/: lib.rs  main.rs
mod_12/: README.md
mod_12/json_parsing_rust/: Cargo.toml
mod_12/json_parsing_rust/src/: main.rs
mod_13/payments_service/: Cargo.toml
mod_14/: README.md
mod_14/common-programming-concepts/: Cargo.toml
mod_15/: README.md  effective_memory_handling.rs  heap_memory.rs
mod_16/: README.md
mod_16/sorting_algos/: Cargo.toml
mod_17/: README.md  b_tree_iot_device_management.rs  balanced_binary_tree.rs  binary_tree.rs  m_arr_tree.md  test_inputs.rs
mod_2/: README.md
mod_2/filework/: Cargo.toml
mod_2/filework/src/: error.rs  lib.rs  main.rs
mod_2/filework/test_data/: transactions.json
mod_3/: README.md
mod_3/advanced_traits_in_rust/: Cargo.toml
mod_4/: README.md
mod_4/guessing_game/: Cargo.toml
mod_5/: README.md
mod_5/understanding_ownership/: Cargo.toml
mod_6/: README.md
mod_6/store_words_with_len/: Cargo.toml
mod_7/: README.md
mod_7/rust_http_client/: Cargo.toml
mod_8/: README.md
mod_8/chat_app/: Cargo.toml
mod_9/: README.md
mod_9/functional_programming_loops/: Cargo.toml
mod_9/rust_combinators/: Cargo.toml
(+31 files in other folders)
