[package]
name = "rust_futures"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="rust_futures"
path="src/lib.rs"

[[bin]]
name="rust_futures_server"
path="src/main.rs"


[dependencies]
futures = {version= "0.3.17", features=["compat", "io-compat"]}
serde = "1.0.130"
tokio = "0.1.21"
failure = "0.1.8"