[package]
name = "filework"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "filework"
path = "src/lib.rs"

[[bin]]
name = "load_trans"
path = "src/main.rs"

[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"